# uranium

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  start-vault.sh
.cargo/: audit.toml
.github/: markdown-link-check-config.json
.github/workflows/: ci.yml  docs.yml  release.yml  vault.yml
.sqlx/: query-1dd7e6250b152dc87769ab91a95fe33a1ba14a21174db8222c65f3d391018ca7.json  query-69b6b905ab027a90a9f682c217e997cd3025c75d0462bbc0e90d6dad1bc6c522.json  query-bbb5db5ba5bd9b45ff1a9c506e0990c44cb3180bb9419a95b51990d41b5a30e5.json  query-be92f3f8eba3a8c5cfa9816843861bbc0bf4a65973c09a462bec9874c822fa17.json
examples/: demo.rs  secure_vault_demo.rs  sqlx.toml.example  uranium.toml.example
integration-tests/: Cargo.toml  integration_test.rs
migrations/: 001_initial_schema.sql
scripts/: setup_db.sh
scripts/tests/: demo.sh  demo_cli.sh  run_integration_tests.sh  run_tests.sh  test_auth.sh  test_se_simple.sh  test_vault_se.sh
tests/: README.md
uranium-cli/: Cargo.toml
uranium-cli/src/: client.rs  config.rs  main.rs
uranium-cli/src/commands/: auth.rs  mod.rs  model.rs  vault.rs
uranium-core/: Cargo.toml  build.rs
uranium-core/benches/: encryption.rs
uranium-core/examples/: full_demo.rs  full_se_integration.rs  keychain_demo.rs  macos_features.rs  macos_security_demo.rs  secure_enclave_demo.rs  simple_demo.rs  simple_se_demo.rs  streaming_encryption_demo.rs  vault_with_se.rs
uranium-core/src/: crypto.rs  errors.rs  integrity.rs  lib.rs  models.rs  storage.rs
uranium-core/src/platform/: linux.rs  mod.rs  windows.rs
uranium-core/src/platform/macos/: keychain.rs  mod.rs  secure_enclave.rs
uranium-core/src/storage/: secure.rs  secure_enclave_storage.rs
uranium-core/tests/: integration_test.rs  keychain_integration.rs
uranium-examples/: Cargo.toml
uranium-sdk/python/: README.md  setup.py  uranium.py  uranium_sdk.py
uranium-sdk/python/examples/: basic_usage.py
uranium-sdk/rust/: Cargo.toml
uranium-sdk/rust/examples/: basic_usage.rs
uranium-sdk/rust/src/: lib.rs  models.rs
uranium-vault/: Cargo.toml
uranium-vault-demo/: Cargo.toml
uranium-vault-demo/src/: main.rs
uranium-vault/.sqlx/: query-170e03c34fad14d35170a464dfd200d9ea2bbdf4331c916173041bc6a4dda77d.json  query-397bf65c85ff575d499285eaa621117c966068031f01a2f0a3184dcf77a17ae1.json  query-3c13b13fe405009a9f63e326bcb62bc949d2419258e816ca52675154dc871f51.json  query-4eecc5c4ca497a35850845a8c0cbfb348e349fc341f352ee268ca07f89ec3549.json  query-88f9b843c4ce71d077b322cd5f262cf6b0166322735a086f5eafd899ea079302.json  query-97a14714421d4eb869aa65470d99db6da48431b07ca07e0478e8c7ab834aba86.json  query-9c7a130f4c03bf39d2da7d19ee967d0b7786edd3f5238da17634d9d9bd448483.json
uranium-vault/examples/: vault_se_demo.rs
uranium-vault/migrations/: 001_initial.sql
uranium-vault/src/: api.rs  audit.rs  auth.rs  cache.rs  config.rs  lib.rs  session.rs  vault.rs
uranium-vault/tests/: vault_test.rs
