[workspace]
members = [
    "uranium-core",
    "uranium-cli",
    "uranium-vault",
    "uranium-vault-demo",
]
exclude = [
    "uranium-sdk/rust",
]
resolver = "2"

[workspace.package]
authors = ["Jonathan Haas"]
edition = "2021"
repository = "https://github.com/haasonsaas/uranium"
license = "AGPL-3.0"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto dependencies
ring = "0.17"
aead = "0.5"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
blake3 = "1.5"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive"] }

# Storage & serialization
bincode = "1.3"
rmp-serde = "1.3"
bytes = "1.7"

# Database & persistence
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "macros", "uuid", "chrono"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# API & networking
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tonic = "0.12"
prost = "0.13"
tower = "0.5"
hyper = "1.4"
hex = "0.4"

# Authentication
jsonwebtoken = "9.3"
