[package]
name = "uranium-vault"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Core
uranium-core = { path = "../uranium-core" }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# API
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }

# System
sysinfo = "0.31"
nix = { version = "0.29", features = ["process", "user", "mman"] }

# Async utilities
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
tempfile = "3"

# Configuration
config = "0.14"
dotenv = "0.15"

[[bin]]
name = "uranium-vault-server"
path = "src/bin/uranium-vault-server.rs"
