[package]
name = "uranium-sdk"
version = "0.1.0"
authors = ["Jonathan Haas"]
edition = "2021"
repository = "https://github.com/haasonsaas/uranium"
license = "MIT"
description = "Rust SDK for Uranium Vault - Secure storage for LLM weights"
keywords = ["uranium", "vault", "sdk", "llm", "security"]
categories = ["api-bindings", "cryptography"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["fs", "io-util"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }